Ajout d'une ligne

--- a/tp1_HelloWebGL/test/Nicolas/index.html
+++ b/tp1_HelloWebGL/test/Nicolas/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Test WebGl</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+<canvas id="canvaWebGl"></canvas>
+<script src="main.js"></script>
 </body>
 </html>
