Ajout des fonctions tp fini

--- a/tp1_HelloWebGL/test/Amaury/index.html
+++ b/tp1_HelloWebGL/test/Amaury/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link type="text/css" rel="stylesheet" href="index.css">
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 
@@ -10,6 +12,7 @@
 </html>
 
 
+<body>
 <canvas id="c"></canvas>
 <script  id="vertex-shader-2d" type="notjs">
 
@@ -45,3 +48,4 @@ and https://webglfundamentals.org/webgl/lessons/webgl-resizing-the-canvas.html
 for webgl-utils, m3, m4, and webgl-lessons-ui.
 -->
 <script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
+</body>
