--- a/tp1_HelloWebGL/test/Nicolas/index.html
+++ b/tp1_HelloWebGL/test/Nicolas/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Test WebGl</title>
     <link rel="stylesheet" href="index.css">
+    <script src="../../../node_modules/three/build/three.min.js"></script>
+    <script src="https://www.khronos.org/registry/webgl/sdk/demos/common/webgl-utils.js"></script>
 </head>
 <body>
-<canvas id="canvaWebGl"></canvas>
-<script src="main.js"></script>
+<!--<canvas id="canvaWebGl"></canvas>-->
+<script src="test2.js"></script>
+
 </body>
 </html>
