--- a/tp1_HelloWebGL/rendu/index.html
+++ b/tp1_HelloWebGL/rendu/index.html
@@ -5,12 +5,12 @@
     <title>Test WebGl</title>
     <link rel="stylesheet" href="index.css">
     <script src="../../../node_modules/three/build/three.min.js"></script>
-    <script src="https://www.khronos.org/registry/webgl/sdk/demos/common/webgl-utils.js"></script>
 </head>
 <body>
-<!--<canvas id="canvaWebGl"></canvas>-->
 <form id="form">
+    <!-- fonction paramétrique de x(t) -->
     x(t) = <input name="xCte1" value="1"> *
+<!-- à faire optimisation des selects -> possible de le faire en javascript avec un document.querySelectorAll -->
     <select name="x1">
         <option value=""></option>
         <option value="cos">cos(t)</option>
@@ -44,7 +44,8 @@
     </select>
     ^ <input name="xPuissance4" value="1"><br>
 
-<!--    Si fonction paramétrique, -->
+
+    <!-- fonction paramétrique de y(t) -->
     y(t) = <input name="yCte1" value="1"> *
     <select name="y1">
         <option value=""></option>
@@ -79,18 +80,26 @@
     </select>
     ^ <input name="yPuissance4" value="1"> <br>
 
+    <!-- permet de changer l'intervalle sur laquelle sera appliqué la fonction paramétrique -->
     Intervalle min = <input name="min" value="0"> + <input name="minPi" value="0"> * pi; max = <input name="max" value="0"> + <input name="maxPi" value="2"> * pi<br>
-<!--    rajouter intervalle d'affichage-->
+<!-- à faire rajouter intervalle d'affichage-->
     Précision : <input name="precision" value="0.001"> <br>
+
     <input id="submit" type="button" value="Dessiner" style="width: inherit">
+
+    <!-- à faire, permettre à l'utilisateur de choisir parmis une sélection de formes -->
+    <!-- possible de le faire depuis javascript en modifiant toutes les cases du formulaire pour faire la forme demandé -->
+
 </form>
 
 <script src="main.js"></script>
 
 <script>
+    // on récupère le bouton auquel appliquer l'événement du click, ainsi que le formulaire que l'on rentrera en paramètre du main
     let form = document.getElementById('form');
     let submit = document.getElementById('submit');
 
+    // lance la fonction au click sur le bouton submit
     submit.addEventListener('click', () => {
         main(form);
     });
