--- a/tp1_HelloWebGL/test/Quentin/index.html
+++ b/tp1_HelloWebGL/test/Quentin/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
+<canvas id="canvas1"></canvas>
+<canvas id="canvas2"></canvas>
+<script src="https://webglfundamentals.org/webgl/resources/webgl-utils.js"></script>
+<script src="https://webglfundamentals.org/webgl/resources/webgl-lessons-helper.js"></script>
 
+<script type="text/javascript" src="cercle.js"></script>
 </body>
 </html>
