--- a/tp1_HelloWebGL/rendu/index.html
+++ b/tp1_HelloWebGL/rendu/index.html
@@ -114,16 +114,18 @@
                 <!-- à faire, permettre à l'utilisateur de choisir parmis une sélection de formes -->
                 <!-- possible de le faire depuis javascript en modifiant toutes les cases du formulaire pour faire la forme demandé -->
                 <br>
-                Forme préprogrammé : <select name="formepreload">
+                Forme préprogrammé : <select id="preload" name="formepreload">
                     <option value=""selected></option>
                     <option value="coeur">coeur</option>
                     <option value="rond">rond</option>
-                    <option value="rectangle" >rectangle</option>
+                    <option value="astroïde" >astroïde</option>
                     <option value="triangle">triangle</option>
                 </select>
             </div>
 
             <input id="submit" type="button" class="btn btn-primary" value="Dessiner" >
+        </div>
+    </div>
 
 </form>
 
@@ -137,6 +139,14 @@
     // on récupère le bouton auquel appliquer l'événement du click, ainsi que le formulaire que l'on rentrera en paramètre du main
     let form = document.getElementById('form');
     let submit = document.getElementById('submit');
+
+    // bouton load figure préchargé
+    let load = document.getElementById('preload');
+
+    // lancer la fonction au click sur le bouton de sélection
+    load.addEventListener('click', () => {
+        managePreSelect(form);
+    });
 
     // lance la fonction au click sur le bouton submit
     submit.addEventListener('click', () => {
