Ajout option zoom

--- a/tp1_HelloWebGL/rendu/index.html
+++ b/tp1_HelloWebGL/rendu/index.html
@@ -70,6 +70,7 @@
                 <!-- à faire rajouter intervalle d'affichage-->
                 <br>
                 Précision : <input name="precision" id="casePrecis" class="caseDonnee" value="0.001"> <br>
+                Dézoom de la caméra : <input name="dezoom" class="caseDonnee" value="7"> <br>
 
                 <!-- permet à l'utilisateur de choisir parmis une sélection de formes -->
                 <br>
